--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,7 +12,7 @@
 			href="./images/favicon-32x32.png"
 		/>
 
-		<title>Frontend Mentor | QR code component</title>
+		<title>QR code component</title>
 
 		<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 		<style>
@@ -26,7 +26,6 @@
 				background-color: hsl(212, 45%, 89%);
 			}
 			.attribution {
-				font-size: 11px;
 				text-align: center;
 				display: flex;
 				justify-content: center;
@@ -38,35 +37,36 @@
 				display: flex;
 				flex-direction: column;
 				align-items: center;
-				padding: 10px;
-				gap: 10px;
-				max-width: 220px;
-				border-radius: 10px;
+				border-radius: 15px;
+				padding: 16px;
+				gap: 25px;
+				max-width: 320px;
+				height: 497px;
 				background-color: hsl(0, 0%, 100%);
 				box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 			}
 			.flex-container > img {
-				position: relative;
-				border-radius: 10px;
-				max-width: 100%;
+				border-radius: 15px;
+				max-width: 288px;
 			}
 			article {
 				display: flex;
 				flex-direction: column;
-				gap: 10px;
-				width: 95%;
-
+				gap: 23px;
 				font-family: "Outfit", sans-serif;
 			}
 			h1 {
-				font-size: 15px;
+				padding: 0 5px;
+				font-size: 24px;
 				font-weight: 700;
 				color: hsl(218, 44%, 22%);
-				padding: 0 5px;
 			}
 			p {
+				font-size: 15px;
+				font-weight: 400;
+				padding: 0 15px;
 				color: hsl(220, 15%, 55%);
-				margin-bottom: 10px;
+				margin-bottom: 43px;
 			}
 		</style>
 	</head>
